src/stylesheets/components/_footer-internal.scss
.footer-internal {
    display: flex;
    flex-direction: column;
}

.footer-internal__wrapper {
    @extend %wrapper;

    display: flex;
    flex-direction: row;
    margin: 3rem 1.5rem 0;
    padding: 2rem 0;
    border-top: 1px solid $gray-da;

    @media(min-width: $screen-md) {
        margin: 3rem 1.5rem;
    }

    @media(min-width: $screen-lg) {
        margin: 3rem auto;
        width: 100%;
    }
}

.footer-internal__contact {
    display: flex;
    flex-direction: column;

    &:first-child {
        margin-right: 4rem;
    }

    @media(min-width: $screen-md) {
        &:first-child {
            margin-right: 10rem;
        }
    }
}

.footer-internal__item {
    @include font-size(12px);

    margin-bottom: 1rem;
    font-weight: $font-weight-normal;

    @media(min-width: $screen-md) {
        @include font-size(18px);
    }
}

.footer-internal__data {
    @include font-size(12px);

    font-weight: $font-weight-semibold;

    @media(min-width: $screen-md) {
        @include font-size(18px);
    }
}

.footer-internal__linkedin {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: -0.5rem;
    width: 20px;
    height: 20px;
    border: 1px solid $gray-da;
    border-radius: 50%;


    img {
        width: 9px;
        height: 9px;
    }

    @media(min-width: $screen-md) {
        width: 32px;
        height: 32px;

        img {
            width: 15px;
            height: 15px;
        }
    }
}

